--- a/contact.html
+++ b/contact.html
@@ -64,13 +64,13 @@
               <a href="https://linkedin.com/in/jannikschilling/" class="d-inline-block p-3"><span class="icon-linkedin"></span></a>
               <a href="https://www.xing.com/profile/Jannik_Schilling7/" class="d-inline-block p-3"><span class="icon-xing"></span></a>
             </div>
-            <form action="#" class="search-form d-inline-block">
+            <!---<form action="#" class="search-form d-inline-block">
 
               <div class="d-flex">
                 <input type="email" class="form-control" placeholder="Search...">
                 <button type="submit" class="btn btn-secondary" ><span class="icon-search"></span></button>
               </div>
-            </form>
+            </form>--->
 
             
           </div>
