--- a/covid19-epidemie.html
+++ b/covid19-epidemie.html
@@ -217,7 +217,7 @@
           <p>Zum Schluß möchte ich mich bei allen Menschen bedanken, die unser System am Laufen halten. Vielen Dank, liebe Ärzte, dass ihr euch um uns kümmert. Vielen Dank, liebe Krankenschwestern, dass ihr euch so rührend um uns kümmert. Vielen Dank, liebe Verkäufer, dass ihr trotzdem unsere Versorgung sicherstellt. Vielen Dank an alle, die durch innovative Ideen, Solidarität und Nachbarschaftshilfe unsere Gesellschaft am Laufen halten. Olaf Scholz hat völlig Recht.</p>
 
           <blockquote>
-          "Wir erleben gegenwärtig eine Krise, die in der Geschichte der Bundesrepublik ohne Vorbild ist. Das, was wir jetzt brauchen, ist Solidarität." - Olaf Scholz
+          "Wir erleben gegenwärtig eine Krise, die in der Geschichte der Bundesrepublik ohne Vorbild ist. Das, was wir jetzt brauchen, ist Solidarität."
           <cite>Olaf Scholz</cite>
           </blockquote>
 
@@ -328,7 +328,7 @@
             </div>
       
       <p>
-        <a href="#" class="more">Mehr beliebte Artikel <span class="icon-keyboard_arrow_right"></span></a>
+        <a href="politik.html" class="more">Mehr beliebte Artikel <span class="icon-keyboard_arrow_right"></span></a>
       </p>
     </div>
 
