--- a/covid19-wirtschaft.html
+++ b/covid19-wirtschaft.html
@@ -246,10 +246,10 @@
           <p>Viele Arbeitgeber stehen vor riesigen Herausforderungen: Produktionsstop, geschlossene Geschäfte, fehlende Kunden. Ohne staatliche Hilfe würden nach der Krise ein Großteil der kleinen und mittelständischen Unternehmen Pleite gehen. Das Problem: Das Kurzarbeitergeld führt nicht durch die Krise und kann seine volle Wirkung erst nach den Coronabedingten Schließungen entfalten. Wenn Deutschlands Firmen nun also massenhaft insolvent würden, wären die für die Arbeitnehmer getroffenen Maßnahmen hilflos.</p>
 
           <p>Daher gibt es für viele Betriebe mittlerweile Hilfen vom Bund, die die Unternehmen bringen sollen. Eine Auswahl der wichtigsten Maßnahmen:</p>
-          <li>
-              <il>Kleinbetriebe bis 10 Mitarbeiter: Soforthilfen bis zu 9000 Euro, Stundung der Miete/Steuer</il>
-              <il>Mittelstand: bis zu 500.000 Euro (bis zu 50 Mitarbeiter) bzw. 700.000 Euro (>50 Mitarbeiter) Kredite mit 10 Jahren Laufzeit; KfW (und damit der Bund) übernehmen 100% des Kreditrisikos, Stundung der Miete/Steuer</il>
-          </li>
+          <il>
+              <li>Kleinbetriebe bis 10 Mitarbeiter: Soforthilfen bis zu 9000 Euro, Stundung der Miete/Steuer</li>
+              <li>Mittelstand: bis zu 500.000 Euro (bis zu 50 Mitarbeiter) bzw. 700.000 Euro (>50 Mitarbeiter) Kredite mit 10 Jahren Laufzeit; KfW (und damit der Bund) übernehmen 100% des Kreditrisikos, Stundung der Miete/Steuer</li>
+          </il>
           
           <p>Entscheidend wird in Zukunft also die Frage sein, ob diese Maßnahmen ausreichen. Sollten es die meisten Unternehmen durch die Krise schaffen, stehen die Chancen gut, dass sich die Wirtschaft schnell wieder erholt. Sollten diese Maßnahmen zu kurz greifen, könnte Deutschland schlimmstenfalls in eine Depression fallen, die uns um Jahre zurückwerfen würde.</p>
 
@@ -270,7 +270,7 @@
           </il>
 
           <div class="pt-5">
-                  <p>Categories:  <a href="#">Design</a>, <a href="#">Events</a>  Tags: <a href="#">#html</a>, <a href="#">#trends</a></p>
+                  <p>Kategorien:  <a href="politik.html">Politik</a>, <a href="business.html">Wirtschaft</a>  Tags: <a href="#">#wirtschaft</a>, <a href="#">#politik</a></p>
           </div>
 
           <h1>Hinterlassen Sie einen Kommentar</h1>
