--- a/covid19-epidemie.html
+++ b/covid19-epidemie.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Jannik Schilling &mdash; Website Template by Colorlib</title>
+  <title>Jannik Schilling</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -171,7 +171,10 @@
 
           <p>In der Delay-Phase werden bei Bedarf erstmals Maßnahmen getroffen, die alle Bürger betreffen und nicht nur Infizierte. Ein landesweiter Lockdown, wie wir ihn gerade sehen, ist der verzweifelte Versuch des Staates wieder Kontrolle über die Verbreitung von Covid-19 zu erlangen.</p>
 
-          <p>SEIR-Modell einer Epidemie mit dem Einfluss von Social-Distancing. Soziale Distanzierung führt zur Abflachung der Infiziertenzahlen und Streckung der Kurve.</p>
+          <figure>
+            <img src="images/SEIR.png" width=100%>
+            <figcaption>Abbildung 1: SEIR-Modell einer Epidemie mit dem Einfluss von Social-Distancing. Soziale Distanzierung führt zur Abflachung der Infiziertenzahlen und Streckung der Kurve.</figcaption>
+          </figure>
           
           <p>Die obige Grafik zeigt den Effekt von Social Distancing: Anstatt eines hohen Peaks, mit dem der Zusammenbruch des Gesundheitssystems, der Einsatz von Kriegsmedizin und eine sehr hohe Zahl an Toten einhergehen, wird die Kurve in die Länge gezogen. Der Gesamtpeak wird kleiner, die Epidemie zieht sich aber deutlich in die Länge.</p>
 
