--- a/covid19-wirtschaft.html
+++ b/covid19-wirtschaft.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Jannik Schilling &mdash; Website Template by Colorlib</title>
+  <title>Jannik Schilling</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -135,8 +135,8 @@
                 <img src="images/jannik_about.jpg" alt="Image" class="img-fluidid">
               </div>
               <div class="vcard">
-                <span class="d-block"><a href="#">Jannik Schilling</a> in <a href="#">Gesundheit</a></span>
-                <span class="date-read">02. April 2020<span class="mx-1">&bullet;</span> Lesezeit: 3 Minuten <span class="icon-star2"></span></span>
+                <span class="d-block"><a href="#">Jannik Schilling</a> in <a href="wirtschaft.html">Wirtschaft</a></span>
+                <span class="date-read">02. April 2020<span class="mx-1">&bullet;</span> Lesezeit: 7 Minuten <span class="icon-star2"></span></span>
               </div>
             </div>
 
