--- a/blog-single.html
+++ b/blog-single.html
@@ -101,6 +101,9 @@
                   <a href="politik.html" class="nav-link text-left">Politik</a>
                 </li>
                 <li>
+                  <a href="wirtschaft.html" class="nav-link text-left">Wirtschaft</a>
+                </li>
+                <li>
                   <a href="business.html" class="nav-link text-left">Geschäftliches</a>
                 </li>
 
