--- a/covid19-epidemie.html
+++ b/covid19-epidemie.html
@@ -101,6 +101,9 @@
                   <a href="politik.html" class="nav-link text-left">Politik</a>
                 </li>
                 <li>
+                  <a href="wirtschaft.html" class="nav-link text-left">Wirtschaft</a>
+                </li>
+                <li>
                   <a href="business.html" class="nav-link text-left">Geschäftliches</a>
                 </li>
 
@@ -148,13 +151,20 @@
               Dass Covid-19 offensichtlich viel bedrohlicher ist, zeigt sich spätestens jetzt. Viele Freiheiten der deutschen Bürger wurden eingeschränkt: Versammlungsfreiheit, Gewerbefreiheit und die Bewegungsfreiheit. Dass diese Maßnahmen getroffen wurden, ist aus epidemiologischer Sicht mehr als richtig, doch wie lange "müssen" wir diese Maßnahmen denn nun durchhalten? Außerdem fragen sich viele, was es damit auf sich hat, dass sich etwa 70% der Bevölkerung infizieren müssen, damit diese Epidemie endet. Diese Fragen und Faktoren werde ich im Folgenden erläutern.
             </p>
 
-          <h2>Phasen einer Epidemie</h2>
+          <h2>Phasen der Reaktion auf eine Epidemie</h2>
           Um die Eindämmung einer Epidemie besser verstehen zu können, betrachten wir drei Reaktionen, die ein Staat zu verschiedenen Zeiten treffen kann.
           <il>
-              <li>Containment ("Eindämmung")</li>
-              <li>Delay ("Verzögerung")</li>
-              <li>Mitigation ("Milderung")</li>
+              <li>Containment vgl. &quot;Eindämmung&quot;</li>
+              <li>Delay vgl. &quot;"Verzögerung&quot;</li>
+              <li>Mitigation vgl. &quot;Milderung&quot;</li>
           </il>
+
+          <figure>
+            <img src="images/epidemie.png" width=100%>
+            <figcaption>Abbildung 1: Drei Möglichkeiten für einen Staat, um auf eine Epidemie zu reagieren.</figcaption>
+          </figure>
+
+
           <br>
 
           <h2>Phase Eins: Containment</h2>
@@ -165,6 +175,11 @@
 
           <p>In Deutschland war der Landkreis Heinsberg (Nordrhein-Westfalen) bereits früh ein Hotspot der Infektionen. Die meisten Covid-19-Erkrankungen lassen sich auf eine Karnevallsitzung zurückführen, die bereits am 15.02.2020 stattfand. Nachdem bekannt wurde, dass ein erkranktes Ehepaar an einer solchen Sitzung teilgenommen hatte, hätten sofort alle Bewohner des Landkreises getestet werden müssen und konsequent alle Kontakte nachverfolgt werden müssen. Diese unerwartete Belastung konnte von den Behörden vor Ort nicht gestemmt werden, weshalb sich die Krankheit schnell weiterverbreiten konnte. Auch deutschlandweit hätten zu diesem Zeitpunkt bereits zahlreiche Tests durchgeführt werden müssen, damit lange unentdeckte Infektionsketten bemerkt werden können. Da dies nicht geschehen ist, hat sich die Krankheit schnell weiterverbreitet. Ein weiterer Infektions-Hotspot war in Ischgl (Tirol/Österreich) wo noch bis Mitte März Apres-Ski stattfanden. Viele junge Hamburger waren zu dieser Zeit in den Skiferien in Österreich und haben sich so unbemerkt infiziert. Die Krankheit hatte sich zu diesem Zeitpunkt schon so weit verbreitet, dass die Containment-Phase ohne Handyapps etc. nicht mehr funktionieren konnte.</p>
 
+          <figure>
+            <img src="images/corona-app.jpg" width=100%>
+            <figcaption>Abbildung 2: Eine Corona-Tracing-App ist in der Containment-Phase ein sehr wichtiges Werkzeug zur Kontaktnachverfolgung.</figcaption>
+          </figure>
+
           <h3>Phase 2: Delay</h3>
 
           <p>Nun begann also Phase II in Deutschland, die Delay-Phase. In der Delay-Phase lautet das Stichwort "Flatten The Curve". Durch Kontaktreduzierungen und die Absage von Großveranstaltungen soll die Verbreitung des Virus verlangsamt werden, da mit einer schnellen Eindämmung nicht mehr zu rechnen ist. In der Delay-Phase sollten besonders Risikogruppen geschützt werden, da diese das Gesundheitssystem überproportional stark belasten würden und es so zum "Einsturz" bringen könnten.</p>
@@ -173,7 +188,7 @@
 
           <figure>
             <img src="images/SEIR.png" width=100%>
-            <figcaption>Abbildung 1: SEIR-Modell einer Epidemie mit dem Einfluss von Social-Distancing. Soziale Distanzierung führt zur Abflachung der Infiziertenzahlen und Streckung der Kurve.</figcaption>
+            <figcaption>Abbildung 3: SEIR-Modell einer Epidemie mit dem Einfluss von Social-Distancing. Soziale Distanzierung führt zur Abflachung der Infiziertenzahlen und Streckung der Kurve.</figcaption>
           </figure>
           
           <p>Die obige Grafik zeigt den Effekt von Social Distancing: Anstatt eines hohen Peaks, mit dem der Zusammenbruch des Gesundheitssystems, der Einsatz von Kriegsmedizin und eine sehr hohe Zahl an Toten einhergehen, wird die Kurve in die Länge gezogen. Der Gesamtpeak wird kleiner, die Epidemie zieht sich aber deutlich in die Länge.</p>
@@ -199,6 +214,11 @@
           <h3>Die Basisreproduktionszahl</h3>
 
           <p>Wenn wir uns mit der Verbreitung einer Epidemie befassen, müssen wir uns mit der Zahl von Ansteckungen befassen. Genauer: wie viele Menschen steckt ein Infizierter durchschnittlich an? Diese Zahl nennen wir die Basisreproduktionszahl R0 einer Krankheit. Für die aktuelle Covid-19-Pandemie wird R0 auf etwa zwei bis drei geschätzt. Das heißt: ein Infizierter steckt durchschnittlich zwei bis drei weitere Menschen an.</p>
+          
+          <figure>
+            <img src="images/basisreproduktionszahl.png" width=100%>
+            <figcaption>Abbildung 4: Exponentielle Verbreitung einer Krankheit bei einer Reproduktionszahl von drei.</figcaption>
+          </figure>
 
           <p>Neben der Basisreproduktionszahl R0 gibt es die Nettoreproduktionszahl Rt, die auch getroffene Maßnahmen zur Eindämmung der Epidemie berücksichtigt. Das Robert-Koch-Institut schätzt Rt zur Zeit (12.04.2020) auf etwa 1,2. Die getroffenen Maßnahmen scheinen also Wirkung zu zeigen. In den Medien wächst nun immer mehr die Frage, wann die getroffenen Maßnahmen wieder gelockert werden können. Die Antwort auf diese Frage ist sicher nicht einfach und bedarf einer genauen Abwägung zwischen den gesundheitlichen, den gesellschaftlichen und den wirtschaftlichen Folgen. Aus epidemiologischer Sicht lassen sich trotzdem einige Schlüsse ziehen, da die Konsequenzen, die aus der Lockerung von Maßnahmen entstehen, recht gut modellieren lassen.</p>
 
