--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
         <div class="row align-items-center">
           <div class="col-12 col-lg-6 d-flex">
             <a href="index.html" class="site-logo">
-              <img href="index.html" src="Logo.png" width=100%>
+              <img href="index.html" src="Logo.png" class="sitelogo-img">
             </a>
 
             <a href="#" class="ml-auto d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black"><span
