--- a/covid19-wirtschaft.html
+++ b/covid19-wirtschaft.html
@@ -137,7 +137,7 @@
           <div class="col-lg-8 single-content">
             
             <p class="mb-5">
-              <img src="posts/recession.jpg" alt="Image" class="img-fluid">
+              <img src="images/financial-crisis.jpg" alt="Image" class="img-fluid">
             </p>  
             <h1 class="mb-4">
               Schlimmste Wirtschaftskrise seit 100 Jahren?!
